# src/main/resources/api.yaml
@@ -1,12 +1,12 @@
 openapi: 3.0.0
 
 info:
-  description: API scheme for pokebet
+  description: API scheme for pulscen
   version: "1.0.0"
-  title: pokebet
+  title: pulscen
 
 tags:
-  - name: pokemon
+  - name: pulscen
 
 servers:
   - url: http://localhost:8080
@@ -49,7 +49,7 @@ paths:
               schema:
                 $ref: 'schemas.yaml#/components/schemas/JwtResponseTo'
 
-  /tenders/new:
+  /tenders:
     post:
       operationId: createTender
       tags: [ tender ]
@@ -66,8 +66,6 @@ paths:
             application/json:
               schema:
                 $ref: 'schemas.yaml#/components/schemas/CreateTenderResponseTo'
-
-  /tenders:
     get:
       operationId: getTenders
       description: Получение всех открытых тендеров
@@ -170,6 +168,28 @@ paths:
             application/json:
               schema:
                 $ref: 'schemas.yaml#/components/schemas/TenderResponseTo'
+    delete:
+      operationId: deleteTender
+      tags: [ tender ]
+      parameters:
+        - $ref: 'parameters.yaml#/components/parameters/idPathParam'
+      responses:
+        200:
+          description: OK
+    put:
+      operationId: updateTender
+      tags: [ tender ]
+      parameters:
+        - $ref: 'parameters.yaml#/components/parameters/idPathParam'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: 'schemas.yaml#/components/schemas/CreateTenderRequestTo'
+      responses:
+        200:
+          description: OK
 
   /tenders/finish/{id}:
     post:
@@ -220,7 +240,7 @@ paths:
         200:
           description: OK
 
-  /offers/new:
+  /offers:
     post:
       operationId: createOffer
       tags: [ offer ]
@@ -243,6 +263,20 @@ paths:
       operationId: getSupplierOffers
       description: Получение предложений поставщика
       tags: [ offer ]
+      parameters:
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            format: int32
+            default: 10
+            description: The number of items to return at one time (max 100)
+        - in: query
+          name: offset
+          schema:
+            type: integer
+            format: int32
+            default: 0
       responses:
         200:
           description: OK
@@ -264,6 +298,14 @@ paths:
             application/json:
               schema:
                 $ref: 'schemas.yaml#/components/schemas/OfferResponseTo'
+    delete:
+      operationId: deleteOffer
+      tags: [ offer ]
+      parameters:
+        - $ref: 'parameters.yaml#/components/parameters/idPathParam'
+      responses:
+        200:
+          description: OK
 
   /offers/by-tender/{id}:
     get:
